[gd_scene load_steps=9 format=3 uid="uid://b0ox0x3gndcbp"]

[ext_resource type="Script" path="res://Towers/VoidTower/VoidTower.gd" id="1_thdy5"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_y078n"]
albedo_color = Color(0.490196, 0, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_3dmcr"]
material = SubResource("StandardMaterial3D_y078n")
size = Vector3(3, 7, 3)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_fqgae"]
height = 7.0
radius = 2.5

[sub_resource type="CylinderShape3D" id="CylinderShape3D_q1c12"]
height = 30.0
radius = 30.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sppfk"]
blend_mode = 1
shading_mode = 0
albedo_color = Color(0, 0.713726, 0.835294, 1)

[sub_resource type="TorusMesh" id="TorusMesh_vpo23"]
material = SubResource("StandardMaterial3D_sppfk")
inner_radius = 29.0
outer_radius = 30.0

[sub_resource type="TorusMesh" id="TorusMesh_mjqi1"]
inner_radius = 2.5
outer_radius = 3.0

[node name="VoidTower" type="Area3D" groups=["tower"]]
script = ExtResource("1_thdy5")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.33012, 0)
mesh = SubResource("BoxMesh_3dmcr")
skeleton = NodePath("")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.33012, 0)
shape = SubResource("CylinderShape3D_fqgae")

[node name="Marker3D" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7.94758, 0)

[node name="AttackRange" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackRange"]
shape = SubResource("CylinderShape3D_q1c12")

[node name="AreaMesh" type="MeshInstance3D" parent="AttackRange"]
visible = false
mesh = SubResource("TorusMesh_vpo23")

[node name="Timer" type="Timer" parent="."]

[node name="Highlight" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("TorusMesh_mjqi1")

[node name="AttackDuration" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="AttackDuration" to="." method="_on_attack_duration_timeout"]
